# exp-gfd

./: .gitignore  README.md  pom.xml
data/: dbpedia_sample.cross  dbpedia_sample.p0.e  dbpedia_sample.p0.v  dbpedia_sample.p1.e  dbpedia_sample.p1.v  dbpedia_sample.p2bv  dbpedia_sample.v
data/query/: 1-1.ptn  1-2.ptn  1-3.ptn  5-5.ptn
lib/metis-5.1.0/: Makefile
lib/metis-5.1.0/programs/: CMakeLists.txt  gpartition.cpp
src/main/java/inf/ed/gfd/detect/frag/: FragmentedGCoordinator.java  FragmentedGWorker.java  FragmentedGWorkerProxy.java  QueryWithWorkUnit.java
src/main/java/inf/ed/gfd/preprocess/: Noizy.java
src/main/java/inf/ed/gfd/structure/: Ball.java  Condition.java  CrossingEdge.java  GFD2.java  GfdMsg.java  Partition.java  TransEdge.java  WorkUnit.java
src/main/java/inf/ed/gfd/util/: Config.java  Dev.java  IO.java  KV.java  Params.java  Stat.java
src/main/java/inf/ed/grape/communicate/: Client2Coordinator.java  Worker.java  Worker2Coordinator.java  Worker2Worker.java  Worker2WorkerProxy.java
src/main/java/inf/ed/grape/interfaces/: LocalComputeTask.java  Message.java  Query.java  Result.java
src/main/java/inf/ed/graph/structure/: Edge.java  EdgeFactory.java  Graph.java  OrthogonalEdge.java  OrthogonalGraph.java  OrthogonalVertex.java  SimpleEdgeFactory.java  SimpleGraph.java  Vertex.java  VertexFactory.java
src/main/java/inf/ed/isomorphism/: LocalViolationEnumInspector.java  Simulation.java  State.java  SubVF2State.java  VF2IsomorphismEnumInspector.java  VF2IsomorphismInspector.java
src/main/resources/: config-sample.properties  log4j2.xml
(+14 files in other folders)
